Added death in the character and made a save game object

--- a/ATTIKA.uproject
+++ b/ATTIKA.uproject
@@ -7,6 +7,11 @@
 		{
 			"Name": "HoudiniEngine",
 			"Enabled": false
+		},
+		{
+			"Name": "EasyMultiSave",
+			"Enabled": false,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/7232621c23174bbbbb64c7bfb6583f6f"
 		}
 	]
 }
