--- a/ATTIKA.uproject
+++ b/ATTIKA.uproject
@@ -12,6 +12,10 @@
 			"Name": "EasyMultiSave",
 			"Enabled": false,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/7232621c23174bbbbb64c7bfb6583f6f"
+		},
+		{
+			"Name": "EditorScriptingUtilities",
+			"Enabled": true
 		}
 	]
 }
