Finished all levels blockout and added some assets to HC level

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=ATTIKA
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/WaterTesting.WaterTesting
-GameDefaultMap=/Game/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
+EditorStartupMap=/Game/Maps/permanentLevel.permanentLevel
+GameDefaultMap=/Game/Maps/permanentLevel.permanentLevel
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
