Fixed a bug that made the character walk slow after getting out of the water body, widened the hole leading to the bathroom level and ignored megascans files until I'm sure the materials are going to be used.

--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,8 @@ Plugins/*/Intermediate/*
 # Cache files for the editor to use
 DerivedDataCache/*
 
-# Unedited starter content
+# Heavy content
 Content/StarterContent/*
 Content/MS_ScaryRestroom/*
+Content/Megascans/*
+Content/MSPresets/*
