EXTRACT KOTHR RAR FILE BEFORE OPENING PROJRCT AND COMPRESS IT AGAIN BEFORE PUSHING IF YOU MODIFIED IT  ...Replaced Amy with Kothr (the original girl), scaled Kothr and props to match and added an initial floor texture and props to other rooms.

--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,6 @@ Content/StarterContent/*
 Content/MS_ScaryRestroom/*
 Content/Megascans/*
 Content/MSPresets/*
+
+#Heavy Character
+Content/ThirdPersonBP/Kothr/*
