--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameName=ATTIKA
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/permanentLevel.permanentLevel
-GameDefaultMap=/Game/Maps/permanentLevel.permanentLevel
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
