--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=ATTIKA
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/permanentLevel.permanentLevel
+EditorStartupMap=/Game/Maps/MainMenu.MainMenu
 GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 TransitionMap=
 bUseSplitscreen=True
