--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=ATTIKA
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/MainMenu.MainMenu
-GameDefaultMap=/Game/Maps/MainMenu.MainMenu
+EditorStartupMap=/Game/Maps/permanentLevel.permanentLevel
+GameDefaultMap=/Game/Maps/permanentLevel.permanentLevel
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
